Mobile overflow issue

--- a/src/sass/reading.sass
+++ b/src/sass/reading.sass
@@ -280,6 +280,7 @@
 
   .checkboxes-wrapper
     display: flex
+    flex-wrap: wrap
     justify-content: space-between
 
     .checkboxes
